Fixed the issue of the whole body overflows

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,12 +7,21 @@
   }
 
 
-* {
-    padding: 0;
-    box-sizing: border-box;
+
+  html, body {
+    margin: 0;
     
   }
-
+  
   body {
-   font-family: 'MyCustomFont';
+    background: url('./assets/background-color.png')
+      no-repeat;
+    font-family: 'MyCustomFont';
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh; /* Full viewport height */
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
   }
